# alm-ontology

./: .gitignore  AGENTS.md  LICENSE  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml
config/: embeddings.yaml
data/: README.md
data/defects/: defects.yaml
data/requirements/: requirements.yaml  tests.yaml
docker/age/: Dockerfile
docs/: README.md  architecture.md  cli-reference.md  data-contract.md
plans/: closed.md  open.md
plans/2026-06-26-age-gqc/: handoff.md  implementation.md  plan.md
plans/2026-06-27-cache-generated/: implementation.md  plan.md
plans/2026-06-27-data-contract/: implementation.md  plan.md
plans/2026-06-27-graph-queries/: implementation.md  plan.md
plans/2026-06-27-project-readme/: implementation.md  plan.md
plans/concept-handover/: age-gqc-plan.md  alm-knowledge-graph-handover.md  deep-research-report.md  linkml-adoption-research.md  poc-proposal.md
projects/vm-e1-sparrow/: README.md  project.yaml
projects/vm-e1-sparrow/data/: README.md
projects/vm-e1-sparrow/data/architecture/: architecture.yaml  components.md  sequences.md
projects/vm-e1-sparrow/data/defects/: defects.yaml
projects/vm-e1-sparrow/data/requirements/: requirements.yaml  tests.yaml
projects/vm-e1-sparrow/gqc/: defects_per_element.gqc.yaml  propagate_dal.gqc.yaml  refines_closure.gqc.yaml
projects/vm-e1-sparrow/graph-queries/: README.md
projects/vm-e1-sparrow/graph-queries/apache-age-open-cypher/: impact.cypher
projects/vm-e1-sparrow/graph-queries/postgres-sql/: coverage_gaps.sql  defects_per_element.sql  impact_recursive.sql  propagate_dal.sql  refines_closure.sql
projects/vm-e1-sparrow/model/: alm.yaml
src/alm_cli/: __init__.py  cli.py
src/alm_core/: __init__.py  data_io.py  paths.py  postgres.py  queries.py  warehouse.py
src/alm_exposure/: __init__.py  pg.py
src/alm_graph/: __init__.py  age.py  duckpgq.py  gqc.py  rustworkx.py  sql.py
src/alm_graph/gqc_specs/: coverage_gaps.gqc.yaml  impact.gqc.yaml  propagate_dal.gqc.yaml  refines_closure.gqc.yaml
src/alm_model/: __init__.py  modelgen.py
src/alm_model/model/: alm.yaml
src/alm_ontology/: charts.py  cli.py  data_io.py  gqc.py  graph_age.py  graph_duckpgq.py  graph_rustworkx.py  modelgen.py  paths.py  pg_exposure.py  queries.py  report.py  serve.py  warehouse.py
src/alm_ontology/gqc/: coverage_gaps.gqc.yaml  defects_per_element.gqc.yaml  impact.gqc.yaml  propagate_dal.gqc.yaml  refines_closure.gqc.yaml
src/alm_ontology/model/: alm.yaml
src/alm_reports/: __init__.py  charts.py  report.py  serve.py
src/tests/: conftest.py  test_coverage.py  test_cross_engine.py  test_gqc.py  test_pg_exposure.py  test_propagation.py
tests/: conftest.py  test_coverage.py  test_cross_engine.py  test_gqc.py  test_pg_exposure.py  test_propagation.py
