[project]
name = "alm-ontology"
version = "0.1.0"
description = "ALM ontology POC: runnable skeleton for the model -> regenerable graph view -> tooling spine (fictional VM-E1 example)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "linkml>=1.8",
    "pydantic>=2.7",
    "duckdb>=1.1",
    "rustworkx>=0.15",
    "pyarrow>=16",
    "pandas>=2.2",
    "plotly>=5.22",
    "faker>=25",
    "pyyaml>=6",
]

[project.scripts]
almon = "alm_ontology.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alm_ontology"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/alm_ontology/generated"]
