[project]
name = "alm-ontology"
version = "0.1.0"
description = "ALM ontology runtime for the model -> regenerable graph view -> tooling spine"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "linkml>=1.8",
    "pydantic>=2.7",
    "rustworkx>=0.15",
    "pandas>=2.2",
    "plotly>=5.22",
    "faker>=25",
    "pyyaml>=6",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "fastembed",
]

[project.scripts]
almon = "alm_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/alm_cli",
    "src/alm_core",
    "src/alm_exposure",
    "src/alm_graph",
    "src/alm_model",
    "src/alm_reports",
]

[tool.hatch.build.targets.wheel.force-include]
"projects/vm-e1-sparrow/config/embeddings.yaml" = "projects/vm-e1-sparrow/config/embeddings.yaml"
"projects/vm-e1-sparrow/gqc" = "projects/vm-e1-sparrow/gqc"
"projects/vm-e1-sparrow/model" = "projects/vm-e1-sparrow/model"

# The active project supplies the model, dataset, GQC specs, and config. Hardcoded
# for now; a --project override can be added when more than one project exists.
[tool.almon]
active_project = "vm-e1-sparrow"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".cache"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
